--- a/thesis/sections/conclusion.tex
+++ b/thesis/sections/conclusion.tex
@@ -3,12 +3,9 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-\todo{Replace "requirements" with "objectives"}
-In this section, we will give a final summary of our work, draw conclusion in light of the requirements towards verification of specifications against higher level properties that were imposed both by us and \citeauthor{Reid17} in \cite{Reid17} and give an outlook for possible future work.
-
 Find an overview of this thesis as a whole in figure \ref{fig:overview}.
-As a first step we developed the MINRV8 architecture in section \ref{sec:minrv8} that was inspired by the RISC-V architecture and implemented in nuXmv.
-In section \ref{sec:checking}, we developed information flow semantics and three information flow properties forming an information flow policy in spirit of the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17}.
+As a first step, the MINRV8 architecture inspired by the RISC-V architecture was defined and implemented in nuXmv in section \ref{sec:minrv8}.
+In sections \ref{sec:ifc}-\ref{sec:checking}, we developed information flow semantics and three information flow properties forming an information flow policy in spirit of the work of \citeauthor{Ferraiuolo17} \cite{Ferraiuolo17}.
 The information flow semantics were used to augmented the model of the MINRV8 by information flow tracking.
 In section \ref{sec:results} we introduced eight assumptions that, when implemented software running in machine-mode such as \glspl{os}, guarantee the absence of vulnerabilities covered by aforementioned information flow properties.
 We evaluated our model, the properties and the assumptions by showing that taken together, they manage to detect both the cache poisoning \cite{Wojtczuk09} and the SYSRET vulnerability \cite{Dunlap19}.
@@ -21,7 +18,7 @@ Finally in section \ref{sec:discussion}, we discussed the limitations and the sc
     \label{fig:overview}
 \end{figure}
 
-In the introduction, we subjected this work to three other goals: it was claimed that the approach presented as part of this thesis is \textit{viable}, i.e. feasible, realistic and generalizable, \textit{relevant}, i.e. it is able to detect issues, and \textit{supplemental}, i.e. it enhances on related work.
+In the introduction, we set three other goals: it was claimed that the approach presented as part of this thesis is \textit{viable}, i.e. feasible, realistic and generalizable, \textit{relevant}, i.e. it is able to detect issues, and \textit{supplemental}, i.e. it enhances on related work.
 
 We were able to show the the implementation of the MINRV8 architecture models the property \enquote{assumptions $ \Leftrightarrow $ properties}.
 This was put to a test by showing that said implementation does violate the properties of section \ref{sec:checking} when it is exposed to the cache poisoning or SYSRET vulnerability.
@@ -46,10 +43,12 @@ During this time, this person did not solely work on this thesis.
 In a non-research scenario one can assume that development would be more straight forward since it would not include the definition of an architecture.
 Due to the exponential blow-up of binary encoded state spaces, there are no guarantees that this approach scales well to realistic and complete architectures.
 However, there are two reasons which make seem likely that this approach does indeed scale.
-Firstly, the proofs here were ran on a small machine and didn't take long.
+Firstly, the proofs here were ran on a small machine and didn't take much time.
 \todo{Strenghtened by related work, i.e. IFT in OS track by one label only}
-Secondly, in section \ref{sec:discuss-observations} it was discussed that bit-wise tracking of information flow might be dropped.
+Secondly, in section \ref{sec:discuss-observations} it was discussed that bit-wise tracking of information flow might be dropped, i.e. there is room for performance improvements.
 All of this gives good reasons to believe that our approach is indeed \textit{viable} and could be applied to other architectures with reasonable effort.
+
+\todo[inline]{Bridge}
 
 In section \ref{sec:verify-spec} four design goals were discussed that were initially introduced in \cite{Reid17}.
 These were defined to apply to high level properties for specifications and list as follows:
@@ -76,7 +75,7 @@ These objectives are met by our work:
 
 Finally, we give an outlook on future work:
 \begin{description}
-    \item[Executable memory] First and foremost, the model could be enhanced by a model of executable memory to more closely model modern architectures.
+    \item[Executable memory] First and foremost, the model could be enhanced by a model of executable memory to more closely resemble modern architectures.
     This was discussed extensively in section \ref{sec:discuss-arch}.
     \item[MMU] In light of \cite{KhakpourSD13} a model of an \gls{mmu} could be implemented to make use of information flow tracking on user-mode level.
     This was discussed in section \ref{sec:related-work}.
@@ -93,3 +92,5 @@ Finally, we give an outlook on future work:
     Applying the assumptions to the next level of abstraction in modern computing might lead to more easy and mainstream usage of formal verification in programming.
     Since these properties are stable for a given architecture, there could be off the shelf tools verifying programs for high-level correctness removing the need to tailor verification efforts per system to be verified.
 \end{description}
+
+\todo[inline]{Final summary}
